--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
     </h1>
     <div class="form-group">
       <label for="question">Question</label>
-      <textarea id="question" placeholder="Enter question"></textarea>
+      <textarea id="question" placeholder="Enter question..."></textarea>
     </div>
     <div class="form-group">
       <label for="answer">Answer</label>
-      <textarea id="answer" placeholder="Enter Answer"></textarea>
+      <textarea id="answer" placeholder="Enter answer..."></textarea>
     </div>
     <button id="add-card" class="btn">
       <i class="fas fa-plus"></i> Add card
